# llm-trace

./: CLAUDE.md  README.md  pyproject.toml
.github/workflows/: deploy.yml  release.yml
docs/: data-spec.md  request-dependency.md  request-graph-implementation.md  ui-plan.md  viz-design.md
llm_path/: cli.py  cook.py
llm_trace/: cli.py  cook.py  models.py  proxy.py
viewer/: README.md  index.html  package-lock.json  package.json
viewer/public/: data.json
viewer/src/: App.tsx  index.css
viewer/src/components/: ThemeProvider.tsx  ThemeToggle.tsx
viewer/src/components/detail/: MessageCard.tsx  RequestDetail.tsx  RequestHeader.tsx  ToolCard.tsx
viewer/src/components/diff/: DiffView.tsx  ModifiedMessage.tsx  UnchangedGroup.tsx
viewer/src/components/layout/: Layout.tsx
viewer/src/components/sidebar/: RequestGraph.tsx  RequestList.tsx  RequestListItem.tsx
viewer/src/hooks/: useTheme.ts  useTraceData.ts
viewer/src/types/: index.ts
viewer/src/utils/: treeLayout.ts
