[project]
name = "llm-path"
dynamic = ["version"]
description = "A tool for tracing LLM requests"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "httpx[socks]>=0.27.0",
    "starlette>=0.36.0",
    "uvicorn>=0.27.0",
]

[project.scripts]
llm-path = "llm_path.cli:main"

[project.optional-dependencies]
dev = [
    "ruff>=0.3.0",
]

[tool.hatch.version]
path = "llm_path/_version.py"

[tool.hatch.build.targets.wheel]
packages = ["llm_path"]
# Include viewer_dist if it exists (created by release script)
artifacts = ["llm_path/viewer_dist/**"]

[tool.hatch.build.targets.sdist]
include = [
    "llm_path/**/*.py",
    "llm_path/viewer_dist/**",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
